// <auto-generated />
using System;
using Funeraria.Infrastructure.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Oracle.EntityFrameworkCore.Metadata;

#nullable disable

namespace Funeraria.Infrastructure.Migrations
{
    [DbContext(typeof(FunerariaDbContext))]
    partial class FunerariaDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.11")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            OracleModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("Funeraria.Domain.Entities.Filial", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("NUMBER(10)")
                        .HasColumnName("ID");

                    OraclePropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Endereco")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("NVARCHAR2(200)")
                        .HasColumnName("ENDERECO");

                    b.Property<string>("Nome")
                        .IsRequired()
                        .HasMaxLength(120)
                        .HasColumnType("NVARCHAR2(120)")
                        .HasColumnName("NOME");

                    b.Property<string>("Numero")
                        .IsRequired()
                        .HasMaxLength(10)
                        .HasColumnType("NVARCHAR2(10)")
                        .HasColumnName("NUMERO");

                    b.HasKey("Id");

                    b.HasIndex("Numero")
                        .IsUnique();

                    b.ToTable("FILIAIS", (string)null);
                });

            modelBuilder.Entity("Funeraria.Domain.Entities.Cliente", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("NUMBER(10)")
                        .HasColumnName("ID");

                    OraclePropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("FilialId")
                        .HasColumnType("NUMBER(10)")
                        .HasColumnName("FILIAL_ID");

                    b.Property<DateTime>("CriadoEm")
                        .HasColumnType("TIMESTAMP(7)")
                        .HasColumnName("CRIADO_EM");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasMaxLength(150)
                        .HasColumnType("NVARCHAR2(150)")
                        .HasColumnName("EMAIL");

                    b.Property<string>("Nome")
                        .IsRequired()
                        .HasMaxLength(150)
                        .HasColumnType("NVARCHAR2(150)")
                        .HasColumnName("NOME");

                    b.Property<string>("TIPO_CLIENTE")
                        .IsRequired()
                        .HasMaxLength(8)
                        .HasColumnType("NVARCHAR2(8)");

                    b.Property<string>("Telefone")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("NVARCHAR2(20)")
                        .HasColumnName("TELEFONE");

                    b.HasKey("Id");

                    b.HasIndex("FilialId");

                    b.ToTable("CLIENTES", (string)null);

                    b.HasDiscriminator<string>("TIPO_CLIENTE").HasValue("Cliente");

                    b.UseTphMappingStrategy();
                });

            modelBuilder.Entity("Funeraria.Domain.Entities.Contratacao", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("NUMBER(10)")
                        .HasColumnName("ID");

                    OraclePropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("ClienteId")
                        .HasColumnType("NUMBER(10)")
                        .HasColumnName("CLIENTE_ID");

                    b.Property<string>("Mensagem")
                        .HasMaxLength(500)
                        .HasColumnType("NVARCHAR2(500)")
                        .HasColumnName("MENSAGEM");

                    b.Property<int?>("PrazoMeses")
                        .HasColumnType("NUMBER(10)")
                        .HasColumnName("PRAZO_MESES");

                    b.Property<DateTime?>("ProcessadaEm")
                        .HasColumnType("TIMESTAMP(7)")
                        .HasColumnName("PROCESSADA_EM");

                    b.Property<int>("ServicoId")
                        .HasColumnType("NUMBER(10)")
                        .HasColumnName("SERVICO_ID");

                    b.Property<int?>("ScoreCalculado")
                        .HasColumnType("NUMBER(10)")
                        .HasColumnName("SCORE_CALCULADO");

                    b.Property<DateTime>("SolicitadaEm")
                        .HasColumnType("TIMESTAMP(7)")
                        .HasColumnName("SOLICITADA_EM");

                    b.Property<int>("Status")
                        .HasColumnType("NUMBER(10)")
                        .HasColumnName("STATUS");

                    b.Property<decimal?>("TaxaAplicada")
                        .HasPrecision(6, 4)
                        .HasColumnType("DECIMAL(6,4)")
                        .HasColumnName("TAXA_APLICADA");

                    b.Property<decimal>("ValorSolicitado")
                        .HasPrecision(18, 2)
                        .HasColumnType("DECIMAL(18,2)")
                        .HasColumnName("VALOR_SOLICITADO");

                    b.HasKey("Id");

                    b.HasIndex("ClienteId");

                    b.HasIndex("ServicoId");

                    b.ToTable("CONTRATACOES", (string)null);
                });

            modelBuilder.Entity("Funeraria.Domain.Entities.Servico", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("NUMBER(10)")
                        .HasColumnName("ID");

                    OraclePropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("Ativo")
                        .HasColumnType("NUMBER(1)")
                        .HasColumnName("ATIVO");

                    b.Property<string>("Descricao")
                        .IsRequired()
                        .HasMaxLength(400)
                        .HasColumnType("NVARCHAR2(400)")
                        .HasColumnName("DESCRICAO");

                    b.Property<string>("Nome")
                        .IsRequired()
                        .HasMaxLength(120)
                        .HasColumnType("NVARCHAR2(120)")
                        .HasColumnName("NOME");

                    b.Property<string>("TIPO_SERVICO")
                        .IsRequired()
                        .HasMaxLength(21)
                        .HasColumnType("NVARCHAR2(21)");

                    b.HasKey("Id");

                    b.ToTable("SERVICOS", (string)null);

                    b.HasDiscriminator<string>("TIPO_SERVICO").HasValue("Servico");

                    b.UseTphMappingStrategy();
                });

            modelBuilder.Entity("Funeraria.Domain.Entities.PessoaFisica", b =>
                {
                    b.HasBaseType("Funeraria.Domain.Entities.Cliente");

                    b.Property<string>("Cpf")
                        .IsRequired()
                        .HasMaxLength(14)
                        .HasColumnType("NVARCHAR2(14)")
                        .HasColumnName("CPF");

                    b.Property<DateTime>("DataNascimento")
                        .HasColumnType("TIMESTAMP(7)")
                        .HasColumnName("DATA_NASCIMENTO");

                    b.Property<decimal>("RendaMensal")
                        .HasPrecision(18, 2)
                        .HasColumnType("DECIMAL(18,2)")
                        .HasColumnName("RENDA_MENSAL");

                    b.HasIndex("Cpf")
                        .IsUnique();

                    b.HasDiscriminator().HasValue("PF");
                });

            modelBuilder.Entity("Funeraria.Domain.Entities.PessoaJuridica", b =>
                {
                    b.HasBaseType("Funeraria.Domain.Entities.Cliente");

                    b.Property<string>("Cnpj")
                        .IsRequired()
                        .HasMaxLength(18)
                        .HasColumnType("NVARCHAR2(18)")
                        .HasColumnName("CNPJ");

                    b.Property<decimal>("FaturamentoMensal")
                        .HasPrecision(18, 2)
                        .HasColumnType("DECIMAL(18,2)")
                        .HasColumnName("FATURAMENTO_MENSAL");

                    b.Property<string>("RazaoSocial")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("NVARCHAR2(200)")
                        .HasColumnName("RAZAO_SOCIAL");

                    b.HasIndex("Cnpj")
                        .IsUnique();

                    b.HasDiscriminator().HasValue("PJ");
                });

            modelBuilder.Entity("Funeraria.Domain.Entities.PlanoFunerario", b =>
                {
                    b.HasBaseType("Funeraria.Domain.Entities.Servico");

                    b.Property<decimal>("CoberturaMaxima")
                        .HasPrecision(18, 2)
                        .HasColumnType("DECIMAL(18,2)")
                        .HasColumnName("COBERTURA_MAXIMA");

                    b.Property<int>("CarenciaMaximaMeses")
                        .HasColumnType("NUMBER(10)")
                        .HasColumnName("CARENCIA_MAX_MESES");

                    b.Property<decimal>("MensalidadeBase")
                        .HasPrecision(6, 4)
                        .HasColumnType("DECIMAL(6,4)")
                        .HasColumnName("MENSALIDADE_BASE");

                    b.HasDiscriminator().HasValue("PLANO_FUNERARIO");
                });

            modelBuilder.Entity("Funeraria.Domain.Entities.ServicoAssistencial", b =>
                {
                    b.HasBaseType("Funeraria.Domain.Entities.Servico");

                    b.Property<decimal>("TaxaDeslocamento")
                        .HasPrecision(18, 2)
                        .HasColumnType("DECIMAL(18,2)")
                        .HasColumnName("TAXA_DESLOCAMENTO");

                    b.Property<decimal>("TaxaPacotePremium")
                        .HasPrecision(6, 4)
                        .HasColumnType("DECIMAL(6,4)")
                        .HasColumnName("TAXA_PACOTE_PREMIUM");

                    b.Property<decimal>("TaxaPacoteBasico")
                        .HasPrecision(6, 4)
                        .HasColumnType("DECIMAL(6,4)")
                        .HasColumnName("TAXA_PACOTE_BASICO");

                    b.HasDiscriminator().HasValue("SERVICO_ASSISTENCIAL");
                });

            modelBuilder.Entity("Funeraria.Domain.Entities.Jazigo", b =>
                {
                    b.HasBaseType("Funeraria.Domain.Entities.Servico");

                    b.Property<string>("CnpjCemiterio")
                        .IsRequired()
                        .HasMaxLength(18)
                        .HasColumnType("NVARCHAR2(18)")
                        .HasColumnName("CNPJ_CEMITERIO");

                    b.Property<decimal>("ValorPerpetuidade")
                        .HasPrecision(18, 2)
                        .HasColumnType("DECIMAL(18,2)")
                        .HasColumnName("VALOR_PERPETUIDADE");

                    b.HasDiscriminator().HasValue("JAZIGO");
                });

            modelBuilder.Entity("Funeraria.Domain.Entities.Cliente", b =>
                {
                    b.HasOne("Funeraria.Domain.Entities.Filial", "Filial")
                        .WithMany("Clientes")
                        .HasForeignKey("FilialId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("Filial");
                });

            modelBuilder.Entity("Funeraria.Domain.Entities.Contratacao", b =>
                {
                    b.HasOne("Funeraria.Domain.Entities.Cliente", "Cliente")
                        .WithMany("Contratacoes")
                        .HasForeignKey("ClienteId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("Funeraria.Domain.Entities.Servico", "Servico")
                        .WithMany()
                        .HasForeignKey("ServicoId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("Cliente");

                    b.Navigation("Servico");
                });

            modelBuilder.Entity("Funeraria.Domain.Entities.Filial", b =>
                {
                    b.Navigation("Clientes");
                });

            modelBuilder.Entity("Funeraria.Domain.Entities.Cliente", b =>
                {
                    b.Navigation("Contratacoes");
                });
#pragma warning restore 612, 618
        }
    }
}
